flower store css added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <img src="img/pngwing 10.png" class="header-img">
     </header>
-
+ <!-- end of the header section  -->
     <section class="feature">
         <h1>Our Featured Flowers</h1>
         <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
@@ -36,16 +36,92 @@
                 <div class="img2"><img src="img/pngwing 7.png"></div>
                 <div class="link"><a href="">Pink Flower Tree</a></div>
             </div>
-
             <div class="fcal-3">
                 <div class="img"><img src="img/pngwing 8.png"></div>
                 <div class="link"><a href="">Pink Flower Tree</a></div>
             </div>
-            
-
          </div>
-
-
     </section>
+ <!-- end of the feature section  -->
+<!-- Extra section html  -->
+
+   <section class="extra">
+    <div class="extra-left">
+        <h6>EVERYDAY FLORALS</h6>
+        <h2>Same Day Delivery <br> Flowers & Gifts</h2>
+        <button>Explore Shop</button>
+    </div>
+    <div class="extra-right">
+      
+    </div>
+   </section>
+<!-- End Extra section html  -->
+
+
+
+     <section class="icon-wrap">
+        <div class="icon-box">
+          <img src="img/Group 57.png" alt="">
+          <p>Same Day Delivery. Click & Collect.</p>
+        </div>
+
+        <div class="icon-box">
+            <img src="img/Group 58.png" alt="">
+            <p>Fresh Flowers. Local Growers.</p>
+          </div>
+
+          <div class="icon-box">
+            <img src="img/Group 59.png" alt="">
+           <p>24/7 Free Support.</p>
+          </div>
+
+     </section>
+<!-- end of the icon box section  -->
+ 
+  <section class="hot-deal">
+    <div class="hot-content">
+        <h2>Hot Deal ! Sale Up To 25% <span>Off</span></h2>
+        <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+        <button>Sing UP</button>
+    </div>
+    <div class="hot-img">
+        <img src="img/pngwing 8.png" alt="">
+    </div>
+  </section>
+<!-- end of the hot deals section  -->
+
+<section class="instagram">
+    <h1>Instagram</h1>
+    <p>It is a long established fact that a reader will be distracted by the readable<br>
+        content of a page when looking at its layout.</p>
+
+     <div class="images-box">
+       <img src="img/Flower 01.png" class="gallery">
+       <img src="img/Rectangle 4.png" class="gallery">
+
+       <img src="img/Rectangle 5.png" class="gallery">
+
+       <img src="img/Rectangle 6.png" class="gallery">
+     </div>
+</section>
+ <section class="newsletter">
+   <h2>Get The Latest Deals</h2>
+   <p>$30 coupon for first shopping</p>
+   <div class="input-field">
+    <input type="text" name="Email" id="email" placeholder="Enter your email here.... ">
+    <button>Subscribe</button>
+   </div>
+ </section>
+
+<!-- footer section  -->
+
+ <footer>
+ <h1>Flower<span>Shop</span></h1>
+ <p>It is a long established fact that a reader will be distracted by the readable<br>
+    content of a page when looking at its layout</p>
+    <p class="copywrie">@2020-2023, FlowerShop.com. All right reserved. 
+    </p>
+
+ </footer>
 </body>
 </html>
